Updated the categories list